crates/ui-macros/tests/compile-fail/ui_action_multiple_args.rs
use poly_ui_macros::ui_action;

#[ui_action(Foo, Bar)]
fn SomeComponent() {}
